Correction erreur Wave : Contraste, visibilité, Accessibilité

--- a/style.css
+++ b/style.css
@@ -100,7 +100,8 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 18px;
 }
 
 .d-bloc button:hover {
@@ -133,7 +134,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(0, 0, 0,);/*--*/
 }
 
 .d-bloc .a-btn:hover,
@@ -150,7 +151,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgb(66, 16, 14); /*--*/
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -476,7 +477,7 @@ button {
 }
 
 .icon-md {
-    font-size: 30px!important;
+    font-size: 40px!important;
 }
 
 .icon-lg {
@@ -651,7 +652,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000!important; /*--*/
 }
 
 .container {
@@ -677,7 +678,25 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 18px; /*------*/
+}
+
+li{
+    list-style: none;
+}
+
+.col-sm-4{
+    margin: 15px 0 0 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.partenaires{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0; /**------**/
 }
 
 .tight-width-whitespace {
@@ -707,6 +726,7 @@ p {
 h2 {
     font-size: 22px;
     line-height: 1.4em;
+    font-weight: bold; /*--*/
 }
 
 h3 {
@@ -722,9 +742,9 @@ h3 {
     box-shadow: 0px 0px 0px #000000;
 }
 
-h1 {
+/*h1 {
     color: #333333!important;
-}
+} */
 
 h4 {
     color: #333333!important;
@@ -736,11 +756,16 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #ffffff!important;
+    font-weight: bold; /*---------*/
 }
-
+.black {
+    color: #000000;
+    font-weight: bold; /*----*/
+}
 .portfolio-thumb {
     margin-bottom: 24px;
+
 }
 
 .portfolio-row {
@@ -775,16 +800,19 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #ffffff!important;
+}
+.tc-black {
+    color: #000000;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #000000!important; /*--*/
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #7F3443!important; /*--*/
     color: #FFFFFF!important;
 }
 
@@ -825,6 +853,15 @@ h4 {
     background-image: url("img/bureau-postit.jpg");
 }
 
+.row-no-gutters{
+    display: flex;
+    justify-content: space-between; /*-------*/
+}
+.col-sm-6{
+    display: flex;
+    flex-direction: column;
+    align-items: center; /*------*/
+}
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
